Update package.json to set private to false and enhance README.md with pnpm installation instructions and contributing guidelines.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "print-calculator",
-  "private": true,
+  "private": false,
   "type": "module",
   "imports": {
     "#/*": "./src/*"
